# weather_project

./: .gitignore  README.md  pyproject.toml
weather_app/: admin.py  models.py  urls.py  views.py
weather_app/migrations/: 0001_initial.py  0002_remove_city_temperature_city_country_and_more.py
weather_app/static/css/: style.css
weather_app/templates/weather_app/: index.html  monthly.html  stats.html  weekly.html
weather_project/: settings.py  urls.py
